# market_analy

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CLAUDE.md  LICENSE.txt  README.md  market_analy_demo.ipynb  market_analy_demo_executed.ipynb  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.agents/skills/dependencies-management/: SKILL.md
.agents/skills/update-agents-md/: SKILL.md
.claude/: settings.json
.github/: release-drafter.yml
.github/workflows/: build-test.yml  draft-release-notes.yml  release.yml
etc/: requirements.txt  requirements_dev.txt  requirements_tests.txt  why_requirements_dependabot_dir.txt
etc/requirements/: requirements.txt
etc/requirements_dependabot/: requirements_tests.txt  why_here.txt
src/market_analy/: __init__.py  analysis.py  cases.py  charts.py  config.py  formatters.py  gui_parts.py  guis.py  movements_base.py  standalone.py  subplots.py  trends.py  trends_alt.py  trends_base.py
src/market_analy/positions/: __init__.py  charts.py  guis.py  positions.py
src/market_analy/trends/: __init__.py  analy.py  analy_alt.py  charts.py  guis.py  movements.py  movements_base.py
src/market_analy/utils/: __init__.py  bq_utils.py  dict_utils.py  ipyvuetify_utils.py  ipywidgets_utils.py  list_utils.py  maths_utils.py  mkt_prices_utils.py  pandas_utils.py
tests/: conftest.py  test_analysis.py  test_charts.py  test_guis.py  test_list_utils.py  test_mkt_prices_utils.py  test_standalone.py  test_subplots.py  test_trends.py  test_trends_alt.py
tests/resources/: dji_15T.csv  dji_1D.csv  dji_1D_alt.csv  prices_analysis  prices_analysis_other
tests/tests_utils/: __init__.py  test_ipywidgets.py  test_mkt_prices.py
