[build-system]
requires = ["setuptools>=77.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "market_analy"
description = "Analysis of exchange-listed financial instruments"
authors = [
  {email = "marcusaread.prog@proton.me"},
  {name = "Marcus Read"},
]
readme = "README.md"
license = "MIT"
keywords = [
    "finance",
    "analysis",
    "prices",
    "historical-data",
    "investing",
    "stocks",
    "currencies",
    "forex",
    "crypto",
    "etf",
    "funds",
    "bonds",
    "commodities",
    "indices",
]
dynamic = ["version"]
requires-python = ">=3.10, <4"

classifiers = [
	"Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "bqplot",
    "exchange-calendars",
    "Jinja2",
    "market-prices",
    "matplotlib",
    "numpy",
    "pandas",   
    "traitlets",
    "tzdata",
    "ipyvuetify",
    "ipywidgets",
]

[project.optional-dependencies]
jupyter = [
    "jupyter",
    "jupyterlab>=3.0",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-mock",
]
dev = [
    {include-group = "test"},
    "ipykernel",
    "mypy",
    "mypy-extensions",
    "pandas-stubs",
    "pre-commit",
    # "ruff",  # use local standalone install or ruff extension for editor.
]

[project.urls]
homepage = "https://github.com/maread99/market_analy"
documentation = "https://github.com/maread99/market_analy"
"Issue Tracker" = "https://github.com/maread99/market_analy/issues"
"Source Code" = "https://github.com/maread99/market_analy"

[tool.setuptools_scm]
write_to = "src/market_analy/_version.py"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
